# snowflake

./: .gitignore  .secrets.baseline  CLAUDE.md  DESIGN.md  LICENSE  README.md  config.py  deploy.sh  field_highlighter.py  pyproject.toml  snowflake.yml  teardown.sh  validate_extraction.py
poc/: ADMIN_GUIDE.md  CHANGELOG.md  DEMO.md  Makefile  README.md  SECURITY.md  benchmark_extraction.py  conftest.py  deploy_poc.sh  generate_contracts.py  generate_receipts.py  generate_sample_docs.py  pyproject.toml  reprovision.py  teardown_poc.sql
poc/sample_documents/: contract_ground_truth.json  receipt_ground_truth.json
poc/scripts/: run_cross_cloud_tests.sh
poc/sql/: 01_setup.sql  02_tables.sql  03_test_single_file.sql  04_batch_extract.sql  05_views.sql  06_automate.sql  07_deploy_streamlit.sql  08_writeback.sql  09_document_types.sql  09_line_item_review.sql  10_harden.sql  12_cost_views.sql
poc/streamlit/: config.py  environment.yml  pyproject.toml  snip_annotator.py  snowflake.yml  streamlit_app.py  sync_streamlit_stage.py
poc/tests/: __init__.py  test_batch_extract_integration.py  test_confidence_scoring.py  test_contract_extraction.py  test_cross_doc_isolation.py  test_dashboard_queries.py  test_data_validation.py  test_deployment_readiness.py  test_document_type_flexibility.py  test_document_viewer_queries.py  test_edge_cases.py  test_extraction_pipeline.py  test_multi_user_concurrency.py  test_phase_improvements.py  test_rbac_negative.py  test_receipt_extraction.py  test_spcs_deployment.py  test_sql_integration.py  test_sql_parity.py  test_user_workflow_e2e.py  test_utility_bill_extraction.py  test_writeback_data_validation.py  test_writeback_integration.py
streamlit/: claude_extraction_utils.py  config.py  conftest.py  environment.yml  generate_invoices.py  pyproject.toml  snowflake.yml  streamlit_app.py  writeback_pdf.py
(+59 files in other folders)
